--- a/nextflow.config
+++ b/nextflow.config
@@ -1,15 +1,17 @@
 
+// Default root of reference database.
+reference_db = "/shared/reference-database/genomes/ensembl/release-102/homo_sapiens/GRCh38"
+
 // Default parameters.
 params {
     dataset_name = null
     fastq_directory = null
     output_directory = null
-    reference_db = "/shared/reference-database/genomes/ensembl/release-102/homo_sapiens/GRCh38"
-    reference_fasta = "${params.reference_db}/fasta/reference.fa.gz",
-    reference_gtf = "${params.reference_db}/gtf/reference.gtf.gz",
-    salmon_index = "${params.reference_db}/salmon-index",
-    star_index = "${params.reference_db}/star-index",
-    rsem_reference = "${params.reference_db}/rsem-reference",
+    reference_fasta = "${reference_db}/fasta/reference.fa.gz"
+    reference_gtf = "${reference_db}/gtf/reference.gtf.gz"
+    salmon_index = "${reference_db}/salmon-index"
+    star_index = "${reference_db}/star-index"
+    rsem_reference = "${reference_db}/rsem-reference"
     rRNA_interval_list = "/shared/reference-database/genomes/rseqc/hg38_rRNA.interval_list"
     multiqc_config = "${projectDir}/multiqc_config.yml"
     logo = "${projectDir}/logo.png"
