--- a/nextflow.config
+++ b/nextflow.config
@@ -12,6 +12,7 @@ params {
     salmon_index = "${reference_db}/salmon-index"
     star_index = "${reference_db}/star-index"
     rsem_reference = "${reference_db}/rsem-reference"
+    reference_refFlat = "${reference_db}/gtf/reference.refFlat"
     rRNA_interval_list = "/shared/reference-database/genomes/rseqc/hg38_rRNA.interval_list"
     multiqc_config = "${projectDir}/multiqc_config.yml"
     logo = "${projectDir}/logo.png"
