--- a/nextflow.config
+++ b/nextflow.config
@@ -24,34 +24,36 @@ profiles {
     // bioinformatics server, EC2 instance 10.122.5.90
     bio {
         workDir = '/efs/nextflow-working'
-        docker {
-            enabled = false
-            runOptions = '-u \$(id -u):\$(id -g)'
-        }
         process {
             executor = 'local'
             cpus = 16
             memory = '60GB'
-            container = 'liameabbott/bulk-rna-seq-pipeline'
         }
     }
 
     // grid engine cluster, head node biohead-2.gatesmri.site
     sge { 
         workDir = '/efs/nextflow-working'
-        docker {
-            enabled = false
-            runOptions = '-u \$(id -u):\$(id -g)'
-        }
         process {
             executor = 'sge'
             penv = 'smp'
             clusterOptions = '-S /bin/bash'
             cpus = 16
             memory = '60GB'
-            container = 'liameabbott/bulk-rna-seq-pipeline'
         }
     }   
+
+    // conda environment
+    conda {
+        process.conda = "${projectDir}/environment.yml"
+    }
+
+    // Docker environment
+    docker {
+        process.container = "liameabbott/bulk-rna-seq-pipeline"
+        docker.enabled = true
+        docker.runOptions = "-u \$(id -u):\$(id -g)"
+    }
 }
 
 // Credentials to access AWS S3 bucket.
