--- a/nextflow.config
+++ b/nextflow.config
@@ -33,7 +33,7 @@ profiles {
 
     // grid engine cluster, head node biohead-2.gatesmri.site
     sge { 
-        workDir = '/efs/nextflow-working'
+        workDir = '/shared/nextflow-working'
         process {
             executor = 'sge'
             penv = 'smp'
@@ -41,14 +41,6 @@ profiles {
             cpus = 16
             memory = '60GB'
         }
-    }   
-}
-
-profiles {
-
-    // conda environment
-    conda {
-        process.conda = "${projectDir}/environment.yml"
     }
 
     // Docker environment
