--- a/nextflow.config
+++ b/nextflow.config
@@ -1,59 +1,84 @@
 
-// Default root of reference database.
-reference_db = "/shared/reference-database/genomes/ensembl/release-102/homo_sapiens/GRCh38"
-
-// Default parameters.
 params {
+
+    // REQUIRED
     dataset_name = null
     fastq_directory = null
     output_directory = null
-    reference_fasta = "${reference_db}/fasta/reference.fa.gz"
-    reference_gtf = "${reference_db}/gtf/reference.gtf.gz"
-    salmon_index = "${reference_db}/salmon-index"
-    star_index = "${reference_db}/star-index"
-    rsem_reference = "${reference_db}/rsem-reference"
-    reference_refFlat = "${reference_db}/gtf/reference.refFlat"
-    rRNA_interval_list = "/shared/reference-database/genomes/rseqc/hg38_rRNA.interval_list"
+    
+    // OPTIONAL (DATABASE FILES)
+    reference_db = "/efs/reference-database"
+    reference_genome = "ensembl.102.homo_sapiens.GRCh38"
+    reference_fasta = ${params.reference_db}/${params.reference_genome}.fa.gz"
+    reference_gtf = "${params.reference_db}/${params.reference_genome}.gtf.gz"
+    salmon_index = "${params.reference_db}/${params.reference_genome}.salmon_index"
+    star_index = "${params.reference_db}/${params.reference_genome}.star_index"
+    rsem_reference = "${params.reference_db}/${params.reference_genome}.rsem_reference"
+    reference_refFlat = "${params.reference_db}/${params.reference_genome}.refFlat"
+    rRNA_interval_list = "${params.reference_db}/rseqc/hg38_rRNA.interval_list"
+    
+    // OPTIONAL (CONFIG FILES)
     multiqc_config = "${projectDir}/multiqc_config.yml"
     logo = "${projectDir}/logo.png"
 }
 
-// Execution profiles.
 profiles {
 
-    // bioinformatics server, EC2 instance 10.122.5.90
+    // bio-dev server (10.122.5.90)
     bio {
-        workDir = '/efs/nextflow-working'
+        workDir = "/efs/.nextflow-working"
         process {
-            executor = 'local'
+            executor = "local"
             cpus = 16
-            memory = '60GB'
+            memory = "64GB"
         }
     }
 
-    // grid engine cluster, head node biohead-2.gatesmri.site
-    sge { 
-        workDir = '/shared/nextflow-working'
+    // slurm cluster (head node 10.122.4.136)
+    slurm {
+        workDir = "/efs/.nextflow-working"
         process {
-            executor = 'sge'
-            penv = 'smp'
-            clusterOptions = '-S /bin/bash'
-            cpus = 16
-            memory = '60GB'
+            executor = "slurm"
+            queueSize = 15
+            pollInterval = "5 min"
+            dumpInterval = "6 min"
+            queueStatInterval = "5 min"
+            exitReadTimeout = "13 min"
+            killBatchSize = 30
+            submitRateLimit = "20 min"
+            // small partition machines (2 CPUs, 16GB RAM)
+            withLabel: sml {
+                clusterOptions = "-p sml -n 2 --exclusive -t 24:00:00"
+            }
+            // medium partition machines (4 CPUs, 32GB RAM)
+            withLabel: med {
+                clusterOptions = "-p med -n 4 --exclusive -t 24:00:00"
+            }
+            // large partition machines (8 CPUs, 64GB RAM)
+            withLabel: lrg {
+                clusterOptions = "-p lrg -n 4 --exclusive -t 24:00:00"
+            }
         }
     }
 
-    // Docker environment
-    docker {
-        process.container = "liameabbott/bulk-rna-seq-pipeline"
-        docker.enabled = true
-        docker.runOptions = "-u \$(id -u):\$(id -g)"
+    // conda environment
+    conda {
+        process.conda = "/shared/software/anaconda3/envs/bulk-rna-seq-pipeline"
+    }
+
+    // docker environment
+    //docker {
+    //    process.container = ...
+    //    docker.enabled = true
+    //    docker.runOptions = "-u \$(id -u):\$(id -g)"
+    //}
+
+    test {
+        params {
+            dataset_name = "test"
+            fastq_directory = "${projectDir}/test/fastqs"
+            output_directory = "${projectDir}/test/output"
+        }
     }
 }
 
-// Credentials to access AWS S3 bucket.
-aws {
-    accessKey = 'AKIA4N6XKSANMF2PE4FB'
-    secretKey = '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'
-    region = 'us-east-1'
-}
