--- a/nextflow.config
+++ b/nextflow.config
@@ -20,6 +20,24 @@ params {
     multiqc_config = "${projectDir}/multiqc_config.yml"
     logo = "${projectDir}/logo.png"
 }
+    
+executor {
+    $slurm {
+        queueSize = 10000
+        pollInterval = "5 min"
+        dumpInterval = "6 min"
+        queueStatInterval = "5 min"
+        exitReadTimeout = "13 min"
+        killBatchSize = 30
+        submitRateLimit = "20 min"
+    }
+    $local {
+        queueSize = 2
+        cpus = 16
+        memory = "64GB"
+    }
+}
+
 
 profiles {
 
@@ -38,24 +56,20 @@ profiles {
         workDir = "/efs/.nextflow-working"
         process {
             executor = "slurm"
-            queueSize = 15
-            pollInterval = "5 min"
-            dumpInterval = "6 min"
-            queueStatInterval = "5 min"
-            exitReadTimeout = "13 min"
-            killBatchSize = 30
-            submitRateLimit = "20 min"
             // small partition machines (2 CPUs, 16GB RAM)
             withLabel: sml {
-                clusterOptions = "-p sml -n 2 --exclusive -t 24:00:00"
+                cpus = 2
+                clusterOptions = "--partition sml --nodes 1 --exclusive --time 24:00:00"
             }
             // medium partition machines (4 CPUs, 32GB RAM)
             withLabel: med {
-                clusterOptions = "-p med -n 4 --exclusive -t 24:00:00"
+                cpus = 4
+                clusterOptions = "--partition med --nodes 1 --exclusive --time 24:00:00"
             }
             // large partition machines (8 CPUs, 64GB RAM)
             withLabel: lrg {
-                clusterOptions = "-p lrg -n 4 --exclusive -t 24:00:00"
+                cpus = 8
+                clusterOptions = "--partition lrg --nodes 1 --exclusive --time 24:00:00"
             }
         }
     }
