--- a/nextflow.config
+++ b/nextflow.config
@@ -24,12 +24,12 @@ params {
 executor {
     $slurm {
         queueSize = 10000
-        pollInterval = "5 min"
-        dumpInterval = "6 min"
-        queueStatInterval = "5 min"
-        exitReadTimeout = "13 min"
-        killBatchSize = 30
-        submitRateLimit = "20 min"
+        pollInterval = "1 min"
+        dumpInterval = "5 min"
+        queueStatInterval = "1 min"
+        exitReadTimeout = "270 sec"
+        killBatchSize = 50
+        submitRateLimit = "50 min"
     }
     $local {
         queueSize = 2
