update conda env

--- a/nextflow.config
+++ b/nextflow.config
@@ -76,7 +76,8 @@ profiles {
 
     // conda environment
     conda {
-        process.conda = "/shared/software/anaconda3/envs/bulk-rna-seq-pipeline"
+        process.conda = "${projectDir}/conda/environment.yml"
+        #process.conda = "/shared/software/anaconda3/envs/bulk-rna-seq-pipeline"
     }
 
     // docker environment
