--- a/nextflow.config
+++ b/nextflow.config
@@ -1,4 +1,3 @@
-
 params {
     // REQUIRED
     dataset_name = null
@@ -6,7 +5,7 @@ params {
     output_directory = null
     
     // OPTIONAL (DATABASE FILES)
-    reference_db = "/efs/reference-database"
+    reference_db = "/efs/bioinformatics/reference-database"
     reference_genome = "ensembl.102.homo_sapiens.GRCh38"
     reference_fasta = "${params.reference_db}/${params.reference_genome}.fa.gz"
     reference_gtf = "${params.reference_db}/${params.reference_genome}.gtf.gz"
@@ -77,16 +76,9 @@ profiles {
     // conda environment
     conda {
         process.conda = "${projectDir}/conda/environment.yml"
-        #process.conda = "/shared/software/anaconda3/envs/bulk-rna-seq-pipeline"
     }
 
-    // docker environment
-    //docker {
-    //    process.container = ...
-    //    docker.enabled = true
-    //    docker.runOptions = "-u \$(id -u):\$(id -g)"
-    //}
-
+    // test environment
     test {
         params {
             dataset_name = "test"
