--- a/nextflow.config
+++ b/nextflow.config
@@ -76,6 +76,7 @@ profiles {
     // conda environment
     conda {
         process.conda = "${projectDir}/conda/environment.yml"
+        conda.cacheDir = "/shared/bioinformatics/conda-envs"
     }
 
     // test environment
