--- a/nextflow.config
+++ b/nextflow.config
@@ -5,15 +5,29 @@ params {
     output_directory = null
     
     // OPTIONAL (DATABASE FILES)
-    reference_db = "/efs/bioinformatics/reference-database"
-    reference_genome = "ensembl.102.homo_sapiens.GRCh38"
-    reference_fasta = "${params.reference_db}/${params.reference_genome}.fa.gz"
-    reference_gtf = "${params.reference_db}/${params.reference_genome}.gtf.gz"
-    salmon_index = "${params.reference_db}/${params.reference_genome}.salmon_index"
-    star_index = "${params.reference_db}/${params.reference_genome}.star_index"
-    rsem_reference = "${params.reference_db}/${params.reference_genome}.rsem_reference"
-    reference_refFlat = "${params.reference_db}/${params.reference_genome}.refFlat"
-    rRNA_interval_list = "${params.reference_db}/rseqc/hg38_rRNA.interval_list"
+    reference_db_root = "/efs/bioinformatics/reference-database"
+    reference_db_source = "ensembl"
+    reference_db_source_version = "release-102"
+    reference_species = "homo_sapiens"
+    reference_build = "GRCh38"
+    reference_db_dir = "${params.reference_db_root}/${params.reference_db_source}/${params.reference_db_source_version}/${params.reference_species}/${params.reference_build}"
+
+    reference_fasta = "${params.reference_db_dir}/fasta/reference.fa.gz"
+    reference_gtf = "${params.reference_db_dir}/gtf/reference.gtf.gz"
+    salmon_index = "${params.reference_db_dir}/salmon-index"
+    star_index = "${params.reference_db_dir}/star-index"
+    rsem_reference = "${params.reference_db_dir}/rsem-reference"
+    reference_refFlat = "${params.reference_db_dir}/gtf/reference.refFlat"
+    rRNA_interval_list = "${params.reference_db_root}/rseqc/hg38_rRNA.interval_list"
+
+    //reference_genome = "ensembl.102.homo_sapiens.GRCh38"
+    //reference_fasta = "${params.reference_db}/${params.reference_genome}.fa.gz"
+    //reference_gtf = "${params.reference_db}/${params.reference_genome}.gtf.gz"
+    //salmon_index = "${params.reference_db}/${params.reference_genome}.salmon_index"
+    //star_index = "${params.reference_db}/${params.reference_genome}.star_index"
+    //rsem_reference = "${params.reference_db}/${params.reference_genome}.rsem_reference"
+    //reference_refFlat = "${params.reference_db}/${params.reference_genome}.refFlat"
+    //rRNA_interval_list = "${params.reference_db}/rseqc/hg38_rRNA.interval_list"
     
     // OPTIONAL (CONFIG FILES)
     multiqc_config = "${projectDir}/multiqc_config.yml"
