--- a/nextflow.config
+++ b/nextflow.config
@@ -56,7 +56,7 @@ profiles {
 
     // bio-dev server (10.122.5.90)
     bio {
-        workDir = "/efs/.nextflow-working"
+        workDir = "/efs/bioinformatics/nextflow-work-dir"
         process {
             executor = "local"
             cpus = 16
@@ -66,7 +66,7 @@ profiles {
 
     // slurm cluster (head node 10.122.4.136)
     slurm {
-        workDir = "/efs/.nextflow-working"
+        workDir = "/efs/bioinformatics/nextflow-work-dir"
         process {
             executor = "slurm"
             // small partition machines (2 CPUs, 16GB RAM)
@@ -90,6 +90,7 @@ profiles {
     // conda environment
     conda {
         process.conda = "${projectDir}/conda/environment.yml"
+	// process.conda =  "/efs/wenhan/tmp/bulk-rna-seq-pipeline"
         conda.cacheDir = "/shared/software/anaconda3/envs"
     }
 
